2008-09-05  Peter Danenberg  <danenberg@users.sourceforge.net>

	* term/cairo.trm (cairopng_do_crop): Crop option for pngcairo.
	SF Patch #1873297 

2008-09-03  Ethan Merritt  <merritt@u.washington.edu>

	* src/axis.c (add_tic_user): NULL labels are OK if requested via
	'set xtics (x1, x2, ...)' as opposed to read from a data file.

	* docs/gnuplot.doc:  Add minimal section on binary skip=foo:baz

2008-08-19  Ethan Merritt  <merritt@u.washington.edu>

	* src/axis.h src/axis.c(gen_tics) src/set.c(set_tics) src/show.c
	src/graphics.c (plot_border): Add an axis tic attribute "rangelimited".
	If set, the border and tics for this axis will be drawn only for the
	range of the data, rather than the full range of the axis.

2008-08-15  Ethan Merritt  <merritt@u.washington.edu>

	* term/dumb.trm: Accept terminal size in the form used by most other
	terminal drivers.   'set term dumb size 80,23"

	* src/set.c (set_tic_prop) src/graph3d.c (ztick_callback):
	Allow tic labels on z axis to have 'tc palette z'
	Feature request #1689545

2008-08-14  Ethan Merritt  <merritt@u.washington.edu>

	* src/misc.c src/command.h src/command.c (do_string) src/mouse.c:
	Add a flag parameter to do_string() indicating whether the string is to
	be freed immediately after copying. This should fix memory leaks both in
	the new eval_command() and the existing call in pop_terminal().

2008-08-12  Juergen Wieferink <wieferink@freenet.de>

	* src/misc.h src/misc.c: Make lf_push() and lf_pop() global.

	* src/command.c (do_string): Make use of lf_push() and lf_pop() to avoid
	memory leaks on int_error().

	* src/command.h src/command.c src/tables.c src/plot.c docs/gnuplot.doc:
	New command `evaluate` executes the commands given by a string argument.

2008-08-09  Ethan Merritt  <merritt@u.washington.edu>

	* src/readline.c (ansi_getc): Teach built-in readline to map
	CSI-H to ^A and CSI-F to ^E, which offers some hope that the <end> and
	<home> keys will do something useful.
	Bug #1556607
